// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should use bind globally 1`] = `
<div>
  <div>
    <span />
    <span />
    <span />
  </div>
</div>
`;

exports[`should use bind globally 2`] = `
<div>
  <div>
    <span>
      Hello Wesley
    </span>
    <span>
      Hello Wesley
    </span>
    <span />
  </div>
</div>
`;

exports[`should use bind on properties 1`] = `
<div>
  <div>
    <span>
      0
    </span>
    <span>
      0
    </span>
    <span>
      number
    </span>
  </div>
</div>
`;

exports[`should use bind on properties 2`] = `
<div>
  <div>
    <span>
      3
    </span>
    <span>
      3
    </span>
    <span>
      number
    </span>
  </div>
</div>
`;
